[package]
name = "serde_json_pythonic_test"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_json_pythonic = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["serde_json_pythonic/std"]
alloc = ["serde_json_pythonic/alloc"]
#preserve_order = ["serde_json_pythonic/preserve_order"]
float_roundtrip = ["serde_json_pythonic/float_roundtrip"]
arbitrary_precision = ["serde_json_pythonic/arbitrary_precision"]
raw_value = ["serde_json_pythonic/raw_value"]
unbounded_depth = ["serde_json_pythonic/unbounded_depth"]
